# resume-rs

./: Cargo.toml  README.md  Trunk.toml  index.html  netlify.toml
.github/workflows/: resume.yaml
public/: styles.scss
src/: lib.rs  main.rs
src/components/: counter_btn.rs  footer.rs  header.rs  mod.rs  projects.rs  sidebar.rs
src/contexts/: mod.rs  project_context.rs  repository_context.rs
src/data/: mod.rs  projects_data.rs
src/models/: commit.rs  mod.rs  project.rs  repository.rs
src/pages/: home.rs  mod.rs  projects_view.rs  timeline_view.rs
src/services/: github_service.rs  mod.rs  projects_service.rs
