[package]
name = "resume-rs"
version = "0.1.0"
edition = "2021"
authors = ["mezdelex <alexcondegomez@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.42"
console_error_panic_hook = "0.1"
console_log = "1"
icondata = "0.6.0"
leptos = { version = "0.8", features = ["csr", "nightly"] }
leptos_icons = "0.7.0"
leptos_meta = { version = "0.8" }
leptos_router = { version = "0.8", features = ["nightly"] }
log = "0.4"
once_cell = "1.21.3"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.221", features = ["derive"] }
thaw = { version = "0.5.0-beta", features = ["csr", "nightly"] }
web-sys = { version = "0.3", features = ["console"] }

[dev-dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-test = "0.3"
web-sys = { version = "0.3", features = ["Document", "Window"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
